--- a/resetPro.css
+++ b/resetPro.css
@@ -123,7 +123,7 @@
     font-weight: inherit;
     font-style: inherit;
     text-decoration: none;
-    color:inherit;
+    /* color:inherit; */
   }
   /* Evitamos problemas con los pseudoelementos de quotes */
   blockquote:before, blockquote:after, q:before, q:after {
