--- a/mediaQuerys.css
+++ b/mediaQuerys.css
@@ -321,24 +321,7 @@
 
     /* Modal niños */
 
-    .modal__contenedor{
-        width: 80%;
-    }
 
-    .modal__titulo{
-        padding: .1em;
-        margin-bottom: .1em;
-    }
-
-    .modal__parrafo{
-        font-size: 12px;
-        padding: 1em 0 1em 0;
-    }
-
-    .modal__cerrar{
-        margin-top: 2em;
-    }
-   
 
 
     /*Formulario*/
@@ -672,28 +655,41 @@
     /* Modal niños */
 
 
-     .modal__contenedor{
-        width: 80%;
+
+    .popup {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        max-height: 800px;
     }
 
-    .modal__titulo{
-        padding: .5em;
-        margin-bottom: .3em;
+    .img {
+        width: 100%;
+        height: 40%;
     }
 
-    .modal__parrafo{
-        font-size: 12px;
-        padding: 2em 0 2em 0;
+    .container-text {
+        width: 100%;
+        height: 60%;
+        padding: 30px;
+        text-align: justify;
     }
 
-    .modal__cerrar{
-        margin-top: 2.5em;
+    .container-text h1 {
+        font-size: 25px;
     }
-   
 
- 
+    .container-text p {
+        font-size: 14px;
+        line-height: 20px;
 
-  
+    }
+
+
+
+
+
+
 
 
 
