--- a/mediaQuerys.css
+++ b/mediaQuerys.css
@@ -138,7 +138,8 @@
     }
 
     .article__card {
-        width: 80%;
+        max-width: 600px;
+        width: 95%;
         padding: 60px;
     }
 
@@ -317,7 +318,7 @@
         justify-content: center;
     }
 
-  
+
 
 
     /* Modal niños */
@@ -449,6 +450,14 @@
             'footer    footer    footer';
     }
 
+
+    .header__titulo {
+        font-size: 20px;
+        font-weight: 300;
+        z-index: 9;
+        color: white;
+    }
+
     /*barra de navegacion*/
     .navbar__item {
         display: block;
@@ -536,6 +545,15 @@
         width: 400px;
         height: 200;
     }
+
+    /*rehma*/
+
+    .article__card {
+        max-width: 600px;
+        width: 95%;
+        padding: 60px;
+    }
+
 
 
     /* estructura de texto y foto */
@@ -657,30 +675,30 @@
 
 
 
-    .popup {
+    .popup__card {
         display: flex;
         flex-direction: column;
         height: 100%;
         max-height: 800px;
     }
 
-    .img {
+    .popup__img {
         width: 100%;
         height: 40%;
     }
 
-    .container-text {
+    .popup__text {
         width: 100%;
         height: 60%;
         padding: 30px;
         text-align: justify;
     }
 
-    .container-text h1 {
+    .popup__text h1 {
         font-size: 25px;
     }
 
-    .container-text p {
+    .popup__text p {
         font-size: 14px;
         line-height: 20px;
 
