--- a/mediaQuerys.css
+++ b/mediaQuerys.css
@@ -1,5 +1,491 @@
 /*Small devices (landscape phones, less than 768px)*/
-@media only screen and (max-width: 460px) {}
+@media only screen and (max-width: 850px) {
+
+    /*Lista enlaces*/
+    .navbar__item {
+        font-size: 10px;
+        margin-right: 1em;
+    }
+
+    .header__titulo {
+        font-size: 12px;
+    }
+
+    .navbar__logo {
+        margin-left: 1em;
+    }
+
+    .navbar__link {
+        list-style: none;
+        letter-spacing: 2px;
+        margin: 0 4px;
+        padding: 8px;
+        cursor: pointer;
+    }
+
+}
+
+
+
+/*Small devices (landscape phones, less than 768px)*/
+@media only screen and (max-width: 768px) {
+
+    .contenedor {
+        width: 95vw;
+
+
+        margin: .6em auto;
+        grid-gap: .7em;
+        display: grid;
+
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(8, auto);
+        grid-template-areas:
+            'header    header    header'
+            'nav       nav       nav'
+            'main      main      main'
+            'article   article   article'
+            'nosotros  nosotros  nosotros'
+            'mision    mision    mision'
+            'aside     aside     aside'
+            'section   section   section'
+            'form      form      form'
+            'footer    footer    footer';
+    }
+
+
+    .header__titulo {
+        font-size: 15px;
+        letter-spacing: 4px;
+        font-weight: 300;
+        z-index: 9;
+        color: white;
+    }
+
+    /*barra de navegacion*/
+    .navbar__item {
+        display: block;
+        background-color: white;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100%;
+        font-size: .8em;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        transform: translateY(-80em);
+        transition: all 1.2s ease-in-out;
+
+
+    }
+
+    .navbar__item--on {
+        transform: translateX(0);
+    }
+
+    .navbar__menu {
+        display: block;
+        color: black;
+        font-size: 1.7em;
+        margin-right: 20px;
+        cursor: pointer;
+    }
+
+    .navbar__link {
+        letter-spacing: 10px;
+        padding: 1em;
+    }
+
+    .navbar__logo {
+        margin-left: 20px;
+    }
+
+    /* Main Pricipal */
+    .main__titulo {
+        font-size: 40px;
+    }
+
+    .main__tituloPre {
+        font-size: 20px;
+    }
+
+    .main__tituloSub {
+        font-size: 10px;
+    }
+
+
+
+    /*Precursores (Videos de Youtube*/
+    .aside {
+        height: auto;
+    }
+
+    .aside::before {
+        height: auto;
+    }
+
+
+
+    .aside__texto {
+        width: 100%;
+        height: auto;
+        text-align: center;
+        color: white;
+        font-size: 30px;
+        z-index: 1;
+        font-family: 'Cardo', serif;
+        margin-top: 50px;
+
+    }
+
+    .aside__titulo {
+        font-size: 35px;
+
+    }
+
+    .aside__subtitulo {
+        font-size: 15px;
+        margin-top: 10px;
+        letter-spacing: 5px;
+
+    }
+
+    .aside__iframe {
+        width: 70%;
+        display: block;
+    }
+
+    .aside__iframe iframe {
+        width: 400px;
+        height: 200;
+    }
+
+    /*rehma*/
+
+    .article__card {
+        max-width: 600px;
+        width: 95%;
+        padding: 60px;
+    }
+
+    /* Nosotros */
+    .nosotros {
+        gap: 10px;
+    }
+
+    /* texto e imagen Uno */
+
+    .nosotros__titulo--uno {
+        font-size: 50px;
+    }
+
+    .nosotros__tituloSub--uno {
+        font-size: 10px;
+        letter-spacing: 10px;
+        margin-top: 10px;
+    }
+
+    .nosotros__parrafo--uno {
+        font-family: 'Open Sans', sans-serif;
+        font-weight: 300;
+        letter-spacing: 0px;
+        font-size: 14px;
+        line-height: 18px;
+        margin-top: 1em;
+        text-align: left;
+    }
+
+    .nosotros__imagenUno {
+        padding: 10px;
+    }
+
+    /* texto e imagen Dos */
+
+    .nosotros__titulo--dos {
+        font-size: 50px;
+    }
+
+    .nosotros__tituloSub--dos {
+        font-size: 10px;
+        letter-spacing: 10px;
+        margin-top: 10px;
+    }
+
+    .nosotros__parrafo--dos {
+        font-family: 'Open Sans', sans-serif;
+        font-weight: 300;
+        letter-spacing: 0px;
+        font-size: 14px;
+        line-height: 18px;
+        margin-top: 1em;
+        text-align: right;
+    }
+
+    .nosotros__imagenDos {
+        padding: 10px;
+    }
+
+
+
+    /* estructura de texto y foto */
+
+    .mision {
+        width: 100%;
+        height: auto;
+        grid-area: mision;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 0;
+        padding: 1.5em;
+    }
+
+    .mision__texto {
+        width: 100%;
+        padding: 20px 0 20px 0;
+        color: white;
+    }
+
+    .mision__tituloPre {
+        font-size: 20px;
+        font-family: 'Cardo', serif;
+        font-weight: 100;
+        margin-bottom: 8px;
+        text-align: center;
+    }
+
+    .mision__linea {
+        width: 90px;
+        height: 2px;
+        background-color: var(--color-uno);
+
+
+
+    }
+
+    .mision__titulo {
+        font-size: 40px;
+        font-family: 'Roboto', sans-serif;
+        font-weight: 900;
+        text-align: center;
+        line-height: 1.2em;
+        margin-top: 10px;
+    }
+
+    .mision__tituloSub {
+        font-size: 12px;
+        font-weight: 400;
+        letter-spacing: 5px;
+        text-align: center;
+        margin-top: 10px;
+    }
+
+    .mision__parrafo {
+        font-size: 12px;
+        margin-top: 25px;
+        line-height: 23px;
+    }
+
+    .mision__imagen {
+        width: 20em;
+    }
+
+
+
+
+    /*iglesia */
+
+    .iglesia {
+        width: 100%;
+    }
+
+    .iglesia__tituloPre {
+        font-size: 20px;
+    }
+
+    .iglesia__titulo {
+        font-size: 40px;
+        line-height: 1.2em;
+    }
+
+    .iglesia__linea {
+        width: 90px;
+        height: 2px;
+        background-color: var(--color-uno);
+        text-align: center;
+        margin: 15px auto;
+    }
+
+    .iglesia__tituloSub {
+        font-size: 12px;
+        font-weight: 400;
+        letter-spacing: 5px;
+    }
+
+    .iglesia__contenedor {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .iglesia__card {
+        grid-template-columns: 300px;
+    }
+
+    .iglesia__cardTitulo {
+        font-size: 20px;
+    }
+
+
+
+
+    /* Modal niños */
+
+
+
+    .popup__card {
+        display: flex;
+        flex-direction: column;
+        height: 80%;
+        max-height: 800px;
+    }
+
+    .popup__img {
+        width: 100%;
+        height: 40%;
+    }
+
+    .popup__text {
+        width: 100%;
+        height: 60%;
+        padding: 35px;
+        text-align: justify;
+    }
+
+    .popup__text h1 {
+        font-size: 25px;
+    }
+
+    .popup__text p {
+        font-size: 12px;
+        line-height: 18px;
+
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+    /*Formulario*/
+    .form__contenedor {
+        width: 80%;
+    }
+
+
+    .form__textarea {
+        background: rgba(255, 255, 255, 1);
+    }
+
+
+
+
+    /*footer*/
+
+    /*Grupo1*/
+    .footer__grupo1 {
+        padding: 2.5em;
+        grid-template-columns: 1fr;
+
+    }
+
+    /*Comunidad*/
+    .footer__texto {
+        text-align: center;
+    }
+
+    .footer__correo {
+        display: block;
+    }
+
+    .footer__titulo {
+        font-size: 23px;
+    }
+
+    .footer__parrafo {
+        font-size: 14px;
+        font-weight: 100;
+        text-align: center;
+    }
+
+
+
+
+    /*Sobre nosotros*/
+    .footer__texto1 {
+        text-align: center;
+    }
+
+    .footer__reuniones {
+        display: block;
+    }
+
+    .footer__titulo1 {
+        font-size: 23px;
+    }
+
+    .footer__parrafo1 {
+        font-size: 14px;
+        font-weight: 100;
+    }
+
+
+    /*Siguenos*/
+    .footer__texto2 {
+        text-align: center;
+        font-size: 30px;
+    }
+
+    .footer__titulo2 {
+        font-size: 23px;
+    }
+
+    .footer__ubicacion {
+        display: block;
+    }
+
+    .footer__social {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+
+    }
+
+    .footer__social a:hover {
+        transform: scale(1.1);
+    }
+
+    .footer__grupo2 {
+        font-size: 18px;
+        color: white;
+    }
+
+}
+
+
 
 /* `sm` applies to x-small devices (portrait phones, less than 576px)*/
 @media only screen and (max-width: 580px) {
@@ -16,14 +502,15 @@
         grid-gap: .7em;
         display: grid;
 
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(9, auto);
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(10, auto);
         grid-template-areas:
 
             'header    header    header'
             'nav       nav       nav'
             'main      main      main'
             'article   article   article'
+            'nosotros  nosotros  nosotros'
             'mision    mision    mision'
             'aside     aside     aside'
             'section   section   section'
@@ -59,7 +546,7 @@
     .navbar__menu {
         display: block;
         color: black;
-        font-size: 1.7em;
+        font-size: 1.4em;
         margin-right: 20px;
         cursor: pointer;
     }
@@ -71,7 +558,7 @@
 
     /*Logo*/
     .navbar__logo {
-        width: 50px;
+        width: 45px;
         margin-left: 20px;
     }
 
@@ -155,6 +642,52 @@
     .article__card svg {
         width: 80vw;
         top: 190px;
+    }
+
+
+    /* Nosotros */
+
+    .nosotros {
+        grid-area: nosotros;
+        width: 100%;
+        height: auto;
+        background-color: rgba(187, 176, 176, 0.302);
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(4, 1fr);
+        row-gap: 20px;
+        column-gap: 20px;
+        align-items: baseline;
+        justify-content: space-between;
+    }
+
+    .nosotros__textoUno{
+        order: 1;
+        width: 100%;
+        text-align: center;
+    }
+
+    .nosotros__parrafo--uno{
+        text-align: justify;
+    }
+
+    .nosotros__imagenUno{
+        order: 2;
+        padding: 10px;
+    }
+
+    .nosotros__textoDos{
+        order: 3;
+        width: 100%;
+        text-align: center;
+    }
+
+    .nosotros__parrafo--dos{
+        text-align: justify;
+    }
+
+    .nosotros__imagenDos{
+        order: 4;
     }
 
 
@@ -420,414 +953,11 @@
 
 }
 
-
-
 /*Small devices (landscape phones, less than 768px)*/
-@media only screen and (max-width: 768px) {
-
-    .contenedor {
-        width: 95vw;
-
-
-        margin: .6em auto;
-        grid-gap: .7em;
-        display: grid;
-
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(8, auto);
-        grid-template-areas:
-            'header    header    header'
-            'nav       nav       nav'
-            'main      main      main'
-            'article   article   article'
-            'mision    mision    mision'
-            'aside     aside     aside'
-            'section   section   section'
-            'form      form      form'
-            'footer    footer    footer';
-    }
-
-
+@media only screen and (max-width: 460px) {
     .header__titulo {
-        font-size: 15px;
-        letter-spacing: 4px;
-        font-weight: 300;
-        z-index: 9;
-        color: white;
-    }
-
-    /*barra de navegacion*/
-    .navbar__item {
-        display: block;
-        background-color: white;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100vw;
-        height: 100%;
-        font-size: .8em;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        transform: translateY(-80em);
-        transition: all 1.2s ease-in-out;
-
-
-    }
-
-    .navbar__item--on {
-        transform: translateX(0);
-    }
-
-    .navbar__menu {
-        display: block;
-        color: black;
-        font-size: 1.7em;
-        margin-right: 20px;
-        cursor: pointer;
-    }
-
-    .navbar__link {
-        letter-spacing: 10px;
-        padding: 1em;
-    }
-
-    .navbar__logo {
-        margin-left: 20px;
-    }
-
-
-
-    /*Precursores (Videos de Youtube*/
-    .aside {
-        height: auto;
-    }
-
-    .aside::before {
-        height: auto;
-    }
-
-
-
-    .aside__texto {
-        width: 100%;
-        height: auto;
-        text-align: center;
-        color: white;
-        font-size: 30px;
-        z-index: 1;
-        font-family: 'Cardo', serif;
-        margin-top: 50px;
-
-    }
-
-    .aside__titulo {
-        font-size: 35px;
-
-    }
-
-    .aside__subtitulo {
-        font-size: 15px;
-        margin-top: 10px;
-        letter-spacing: 5px;
-
-    }
-
-    .aside__iframe {
-        width: 70%;
-        display: block;
-    }
-
-    .aside__iframe iframe {
-        width: 400px;
-        height: 200;
-    }
-
-    /*rehma*/
-
-    .article__card {
-        max-width: 600px;
-        width: 95%;
-        padding: 60px;
-    }
-
-
-
-    /* estructura de texto y foto */
-
-    .mision {
-        width: 100%;
-        height: auto;
-        grid-area: mision;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        margin: 0;
-        padding: 1.5em;
-    }
-
-    .mision__texto {
-        width: 100%;
-        padding: 20px 0 20px 0;
-        color: white;
-    }
-
-    .mision__tituloPre {
-        font-size: 20px;
-        font-family: 'Cardo', serif;
-        font-weight: 100;
-        margin-bottom: 8px;
-        text-align: center;
-    }
-
-    .mision__linea {
-        width: 90px;
-        height: 2px;
-        background-color: var(--color-uno);
-
-
-
-    }
-
-    .mision__titulo {
-        font-size: 40px;
-        font-family: 'Roboto', sans-serif;
-        font-weight: 900;
-        text-align: center;
-        line-height: 1.2em;
-        margin-top: 10px;
-    }
-
-    .mision__tituloSub {
-        font-size: 12px;
-        font-weight: 400;
-        letter-spacing: 5px;
-        text-align: center;
-        margin-top: 10px;
-    }
-
-    .mision__parrafo {
-        font-size: 12px;
-        margin-top: 25px;
-        line-height: 23px;
-    }
-
-    .mision__imagen {
-        width: 20em;
-    }
-
-
-
-
-    /*iglesia */
-
-    .iglesia {
-        width: 100%;
-    }
-
-    .iglesia__tituloPre {
-        font-size: 20px;
-    }
-
-    .iglesia__titulo {
-        font-size: 40px;
-        line-height: 1.2em;
-    }
-
-    .iglesia__linea {
-        width: 90px;
-        height: 2px;
-        background-color: var(--color-uno);
-        text-align: center;
-        margin: 15px auto;
-    }
-
-    .iglesia__tituloSub {
-        font-size: 12px;
-        font-weight: 400;
-        letter-spacing: 5px;
-    }
-
-    .iglesia__contenedor {
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .iglesia__card {
-        grid-template-columns: 300px;
-    }
-
-    .iglesia__cardTitulo {
-        font-size: 20px;
-    }
-
-
-
-
-    /* Modal niños */
-
-
-
-    .popup__card {
-        display: flex;
-        flex-direction: column;
-        height: 100%;
-        max-height: 800px;
-    }
-
-    .popup__img {
-        width: 100%;
-        height: 40%;
-    }
-
-    .popup__text {
-        width: 100%;
-        height: 60%;
-        padding: 30px;
-        text-align: justify;
-    }
-
-    .popup__text h1 {
-        font-size: 25px;
-    }
-
-    .popup__text p {
-        font-size: 14px;
-        line-height: 20px;
-
-    }
-
-
-
-
-
-
-
-
-
-
-
-
-    /*Formulario*/
-    .form__contenedor {
-        width: 80%;
-    }
-
-
-    .form__textarea {
-        background: rgba(255, 255, 255, 1);
-    }
-
-
-
-
-    /*footer*/
-
-    /*Grupo1*/
-    .footer__grupo1 {
-        padding: 2.5em;
-        grid-template-columns: 1fr;
-
-    }
-
-    /*Comunidad*/
-    .footer__texto {
-        text-align: center;
-    }
-
-    .footer__correo {
-        display: block;
-    }
-
-    .footer__titulo {
-        font-size: 23px;
-    }
-
-    .footer__parrafo {
-        font-size: 14px;
-        font-weight: 100;
-        text-align: center;
-    }
-
-
-
-
-    /*Sobre nosotros*/
-    .footer__texto1 {
-        text-align: center;
-    }
-
-    .footer__reuniones {
-        display: block;
-    }
-
-    .footer__titulo1 {
-        font-size: 23px;
-    }
-
-    .footer__parrafo1 {
-        font-size: 14px;
-        font-weight: 100;
-    }
-
-
-    /*Siguenos*/
-    .footer__texto2 {
-        text-align: center;
-        font-size: 30px;
-    }
-
-    .footer__titulo2 {
-        font-size: 23px;
-    }
-
-    .footer__ubicacion {
-        display: block;
-    }
-
-    .footer__social {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-
-
-    }
-
-    .footer__social a:hover {
-        transform: scale(1.1);
-    }
-
-    .footer__grupo2 {
-        font-size: 18px;
-        color: white;
-    }
-
-
-
-
-}
-
-/*Small devices (landscape phones, less than 768px)*/
-@media only screen and (max-width: 850px) {
-
-    /*Lista enlaces*/
-    .navbar__item {
         font-size: 10px;
-
+        font-weight: 300;
+        letter-spacing: 3px;
     }
-
-    .header__titulo {
-        font-size: 12px;
-
-    }
-
-
-
-
-
 }
