--- a/style.css
+++ b/style.css
@@ -381,7 +381,7 @@ article[id] {
   width: 50vw;
   position: absolute;
   top: 200px;
-  left: -250px;
+  left: -280px;
   z-index: -1;
 }
 
@@ -393,20 +393,22 @@ article[id] {
 
 
 
-/* Nosotros */
+/* mision y vision */
 
 .nosotros {
   grid-area: nosotros;
   width: 100%;
   height: auto;
-  background-color: rgba(187, 176, 176, 0.302);
+  /* background-color: #DFDBE5; */
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%239C92AC' fill-opacity='0.2'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 1fr);
   row-gap: 20px;
   column-gap: 20px;
   align-items: baseline;
-  justify-content: space-between;
+  justify-content: center;
+  padding: 20px;
 
 }
 
@@ -420,15 +422,16 @@ article[id] {
 }
 
 .nosotros__titulo--uno {
-  font-size: 60px;
+  font-size: 80px;
   font-family: 'Roboto', sans-serif;
-  font-weight: 400;
+  font-weight: 600;
+  letter-spacing: 15px;
 }
 
 .nosotros__tituloSub--uno {
   font-size: 13px;
   font-weight: 400;
-  letter-spacing: 12px;
+  letter-spacing: 20px;
   margin-top: 20px;
 }
 
@@ -442,6 +445,8 @@ article[id] {
 }
 
 .nosotros__imagenUno {
+  width: 600px;
+  height: 600px;
   padding: 20px;
 }
 
@@ -453,13 +458,15 @@ article[id] {
   padding: 50px;
   text-align: right;
   /* background-color: var(--color-tres); */
+  
 }
 
 
 .nosotros__titulo--dos {
-  font-size: 65px;
+  font-size: 80px;
   font-family: 'Roboto', sans-serif;
-  font-weight: 400;
+  font-weight: 600;
+  letter-spacing: 15px;
 }
 
 .nosotros__tituloSub--dos {
@@ -479,6 +486,8 @@ article[id] {
 }
 
 .nosotros__imagenDos {
+  width: 600px;
+  height: 600px;
   padding: 20px;
 }
 
